<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_home" />
    
    <item
        android:id="@+id/nav_tasks"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_tasks" />
    
    <item
        android:id="@+id/nav_quiz"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_quiz" />
    
    <item
        android:id="@+id/nav_reward"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_reward" />
    
    <item
        android:id="@+id/nav_shop"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_shop" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/child_profile" />
</menu>

